outgoung shipment add, edit shipment progressbar Pagination alignment bug, multiple products missalignment bug progressbar

--- a/src/app/pages/shipments/incoming-shipments/incoming-shipments.component.scss
+++ b/src/app/pages/shipments/incoming-shipments/incoming-shipments.component.scss
@@ -35,6 +35,7 @@ table {
   .element-detail {
     overflow: hidden;
     display: flex;
+    flex-flow: wrap;
   }
   
 
